description = "Persists changes from queue to DB"

apply plugin: 'groovy'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

version = '0.0.1'

sourceCompatibility = 11
targetCompatibility = 11

test {
    useJUnitPlatform()
    jvmArgs '--add-exports', 'java.base/jdk.internal.ref=ALL-UNNAMED' //TODO Cassandra 4 - Remove when no longer needed
}

dependencies {
    annotationProcessor 'org.projectlombok:lombok:1.18.18'
    compileOnly 'org.projectlombok:lombok:1.18.18'

    implementation 'org.springframework.boot:spring-boot-starter:2.4.2'
    implementation 'org.springframework.kafka:spring-kafka:2.6.5'
    implementation 'org.springframework.data:spring-data-cassandra:3.0.1.RELEASE'
    implementation 'com.datastax.oss:java-driver-core:4.7.2'

    implementation 'com.fasterxml.jackson.core:jackson-core:2.12.1'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.1'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.12.1'
    implementation 'com.google.guava:guava:30.1-jre'

    testImplementation project(':test-utils')
    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.4.2'
    testImplementation 'org.spockframework:spock-spring:2.0-M2-groovy-2.5'
    testImplementation 'org.spockframework:spock-junit4:2.0-M2-groovy-2.5'
    testImplementation 'org.springframework.kafka:spring-kafka-test:2.6.5'
    testImplementation 'org.cassandraunit:cassandra-unit:4.3.1.0'
    testImplementation 'org.apache.cassandra:cassandra-all:4.0-beta4'            //TODO Cassandra 4 - Remove when version 4 included in cassandra-unit-spring
    testImplementation 'org.hibernate.validator:hibernate-validator:6.1.5.Final' //TODO Cassandra 4 - Remove when working version inherited frm cassandra-unit-spring
}
